# caido-python

./: .gitignore  README.md  generate_code.py  pyproject.toml  run.py  setup.cfg
caido/: __init__.py  client.py  mutations.py  queries.py
caido/models/: __init__.py  alteration.py  authenticationerrorreason.py  authenticationrequest.py  authenticationscope.py  authenticationtoken.py  authenticationusererror.py  automateconcurrencysetting.py  automateconnectioninfo.py  automateentry.py  automateentryedge.py  automateentryrequest.py  automateentryrequestconnection.py  automateentryrequestedge.py  automateentryrequestorderby.py  automateentryrequestpayload.py  automatehostedfilepayload.py  automatenullpayload.py  automatepayload.py  automatepayloadkind.py  automatepayloadoptions.py  automatepayloadstrategy.py  automateplaceholder.py  automateprefixpreprocessor.py  automatepreprocessor.py  automatepreprocessorkind.py  automatepreprocessoroptions.py  automateretryonfailuresetting.py  automatesession.py  automatesessionconnection.py  automatesessionedge.py  automatesettings.py  automatesimplelistpayload.py  automatesuffixpreprocessor.py  automatetask.py  automatetaskconnection.py  automatetaskedge.py  automatetaskerrorreason.py  automatetaskusererror.py  automateurlencodeoptions.py  (+200 more)
