[metadata]
name = caido
version = 0.1.0
author = Mathijs Mortimer
author_email = mathijs@mortimer.nl
url = https://www.mortimer.nl
description = Python client to interact with Caido web security auditing toolkit
long_description = file: README.md
long_description_content_type = text/markdown
keywords = caido, setuptools
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    httpx
